[package]
name = "tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = "0.26.1"
webbrowser = "0.8.10"
anyhow = "1.0.71"
clap = "4.3.10"
serde = { version = "1.0.165", features = ["derive"] }
serde_json = "1.0.99"
toml = "0.7.5"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
structopt = "0.3.26"
dirs-next = "2.0.0"
itertools = "0.11.0"
async-trait = "0.1.69"



[dev-dependencies]
pretty_assertions = "1.0.0"
